--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "react-super-responsive-table": "^5.2.3",
     "react-type-animation": "^3.2.0",
     "redux-toolkit": "^1.1.2",
+    "scripts": "^0.1.0",
+    "showdown": "^2.1.0",
+    "swiper": "^11.1.3",
+    "swiper-react": "^1.0.0",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
