pdfviewer implemented in videodetails file

--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.2.0",
+    "@react-pdf-viewer/core": "^3.4.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.4.0",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "concurrently": "^8.2.2",
     "copy-to-clipboard": "^3.3.3",
+    "pdfjs-dist": "^2.11.338",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
