--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "copy-to-clipboard": "^3.3.3",
     "pdfjs-dist": "^2.11.338",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
